--- a/src/assets/styles/components/Footer.scss
+++ b/src/assets/styles/components/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
   align-items: center;
-  background-color: #8f57fd;
+  background-color: #020007;
   display: flex;
   height: 100px;
   width: 100%;
