--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -1,7 +1,7 @@
 .header {
   align-items: center;
-  background: #8f57fd;
-  color: white;
+  background: #04000c;
+  color: rgb(254, 254, 255);
   display: flex;
   height: 100px;
   justify-content: space-between;
